--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "bootstrap": "^5.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.12.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -39,5 +40,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "tailwindcss": "^3.3.6"
     }
 }
