--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-icons": "^4.12.0",
         "react-leaflet": "^4.2.1",
         "react-scripts": "5.0.1",
+        "swiper": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
